# word-hunter

./: .gitignore  .prettierignore  .prettierrc  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
frontend/: .prettierrc  package-lock.json  package.json  setupTests.js
frontend/src-tauri/: Cargo.toml
frontend/src/routes/: +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs
src-tauri/src/utils/: text_grabber.rs
src/factories/: taskFactory.ts
src/lib/: constants.ts
src/lib/dashboard/: HistoryTable.svelte  Statistics.svelte  Task.svelte  TaskCarousel.svelte  WordHunterButton.svelte
src/lib/nav/: NavBar.svelte
src/routes/: +layout.svelte  +page.svelte
src/stores/: selectedTextStore.ts
src/style/: global.css
src/types/: tableCell.ts  task.ts
src/utils/: textGrabber.ts
tests/lib/dashboard/: HistoryTable.test.js  Statistics.test.js  Task.test.js  TaskCarousel.test.js  WordHunterButton.test.js
tests/lib/nav/: NavBar.test.js
tests/routes/: page.test.js
