[package]
name = "word-hunter"
version = "0.1.0"
description = "A Tauri App"
authors = ["AdrakPro"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.11", features = [] }
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
get-selected-text = "=0.1.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
